k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssl-test-service
  labels:
    app: ssl-test
  annotations:
    service.alpha.kubernetes.io/app-protocols: '{"ssl-tls":"HTTPS"}'
spec:
  type: NodePort
  ports:
  - name: "ssl-tls"
    port: 443
    targetPort: 8443
  selector:
    app: ssl-test
