k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.global-static-ip-name: "hello-static"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true" 
spec:
  tls:
  - secretName: sslcerts
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: ssl-test-service
          servicePort: 8080
